--- a/src/components/AstronomyPictureListItem/style.module.css
+++ b/src/components/AstronomyPictureListItem/style.module.css
@@ -7,6 +7,7 @@
   width: 350px;
   object-fit: cover;
   display: block;
+  border-radius: .5rem;
 }
 
 .mainTitle {
@@ -15,6 +16,7 @@
   padding: 1rem 1rem .5rem 1rem;
   margin-top: -6.8rem;
   width: 350px;
+  border-radius: .5rem;
 }
 
 .mainTitle h4 {
