--- a/src/components/AstronomyPictureOfDay/style.module.css
+++ b/src/components/AstronomyPictureOfDay/style.module.css
@@ -8,7 +8,8 @@
 
 .img {
   width: 100%;
-  height: auto;
+  height: 700px;
+  object-fit: cover;
 }
 
 p {
@@ -16,17 +17,23 @@ p {
   font-weight: normal;
   text-align: justify;
   text-justify: inter-word;
+  color: var(--dark);
 }
 
 .date {
   font-weight: bold;
   font-size: 1.9rem;
+  color: var(--dark);
 }
 
 .copyright {
   font-weight: bold;
   font-size: 1.9rem;
   color: var(--light-gray);
+}
+
+.explanation {
+  color: var(--dark);
 }
 
 .close {
