--- a/src/global.css
+++ b/src/global.css
@@ -24,7 +24,7 @@ html {
 }
 
 body {
-  background-color: var(--white);
+  /* background-color: var(--white); */
   position: relative;
   width: 100%;
   height: 100%;
