--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap');
 
 :root {
+  --black: #000;
   --white: #fff;
   --dark: #282828;
   --blue: #0B3D91;
@@ -24,7 +25,7 @@ html {
 }
 
 body {
-  /* background-color: var(--white); */
+  background-color: var(--black) !important;
   position: relative;
   width: 100%;
   height: 100%;
