--- a/src/components/NavBar/style.module.css
+++ b/src/components/NavBar/style.module.css
@@ -4,5 +4,9 @@
 
 Nav h1 {
   text-align: center;
-  color: var(--white)
+  color: var(--white);
 }
+
+.navbar-toggler {
+  color: var(--white) !important;
+} 
