--- a/src/components/AstronomyPictureToday/style.module.css
+++ b/src/components/AstronomyPictureToday/style.module.css
@@ -24,15 +24,22 @@ p {
   font-weight: normal;
   text-align: justify;
   text-justify: inter-word;
-  color: var(--white);
 }
 
 .titleImage {
   font-weight: bold;
   font-size: 1.9rem;
+  color: var(--white);
 }
 
 .copyright {
-  font-weight: bold;
+  font-weight: normal;
   font-size: 1.3rem;
+  color: var(--white);
+}
+
+.explanation {
+  font-weight: normal;
+  font-size: 1.7rem;
+  color: var(--white);
 }
