--- a/src/components/SearchAstronomyMedia/style.module.css
+++ b/src/components/SearchAstronomyMedia/style.module.css
@@ -43,3 +43,12 @@ p {
   font-size: 1.9rem !important;
   padding: 1 1.5rem !important;
 }
+
+.spinner {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2.5rem;
+  padding-bottom: 0rem;
+}
